2008-04-18:
* Added: restoring scrollbar and cursor position when 
  restoring session
* Fixed: bug with relative paths in filename (at statusbar)
* Fixed: copying highlighting schemes to home dir. Now checks 
  if every single file exists.

2008-04-17:
* Added: "replaceTabsWithSpaces" option (manually at 
  config file for now)

2008-04-16:
* Fixed: if the app was closed maximized, it doesn't restore 
  normal size when started again;
* Added: French localization;

2008-04-15:
* Fixed: crash when tried to change 'Show line numbers' or 
  'Adjust by width' without any opened documents;
* Added: options 'Show indents' and 'Highlight current line'
  to Settings dialog;
* Added: "useCurrentDocDir" option (manually at 
  config file for now) for 'Open file' dialog;


-------------------------------
Version 0.3-dev
-------------------------------
* using QScintilla instead of QTextEdit;
* manual syntax highlighting selection;
* custom highlights for C++, Makefile, Python, HTML, XML, Bash, Perl, Ruby, JavaScript;
* updating markers menu;
* icon themes now at user home dir
* one built-in icon theme


-------------------------------
Exported from 0.2.1
-------------------------------
* Fixed: (Windows) sometimes wrong tab name appeared after 'Save as'
  action (relative or absolute file path instead of file name)
* Fixed: multiple asking 'what to do?' when file was modified by 
  external program
* Fixed: menu item 'Recent files' has an old icon when icon theme changed


===============================
Version 0.2-release
===============================
* Added: move to the next/previous marker;
* Fixed: opening in existing instance using relative file 
  names in console;
* Fixed: regression in beta3 with multi-line blocks highlighting;


-------------------------------
Version 0.2-beta3
-------------------------------
* Changed: opening new file now replaces empty unchanged document, if it
  is the only one which is opened at that momend;