@@ -35,11 +35,13 @@ SessionDlg::SessionDlg(QWidget* parent) : QDialog(parent), result_(0) {
 	if (sessionDir.exists()) {
 		QStringList files = sessionDir.entryList(QDir::Files | QDir::NoSymLinks);
 		foreach (QString file, files) {
-			QStringList items;
-			items << file;
-			QTreeWidgetItem* it = new QTreeWidgetItem(items);
-//			it->setHeight(20);
-			ui.sessionTree->addTopLevelItem(it);
+			if (file.compare("_empty_session_") != 0) {
+				QStringList items;
+				items << file;
+				QTreeWidgetItem* it = new QTreeWidgetItem(items);
+//				it->setHeight(20);
+				ui.sessionTree->addTopLevelItem(it);
+			}
 		}
 		if (files.count() > 0)
 			ui.sessionTree->setCurrentItem(ui.sessionTree->topLevelItem(0));
