@@ -1,3 +1,6 @@
+2008-04-19:
+* Added: saving of last session even if no name was given to it
+
 2008-04-18:
 * Added: restoring scrollbar and cursor position when 
   restoring session
